# ee_review

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  install.sh  nginx.conf  pyproject.toml
backend/: build_frontend.py  cli.py  database.py  main.py
backend/auth/: crud.py  models.py  routes.py  schemas.py
backend/proj/: crud.py  models.py  routes.py  schemas.py
backend/static/: index.html
backend/static/assets/: index-37k40jXc.css  index-9TRCjeHC.css  index-BeAbiCAX.js  index-BlunKDSA.js  index-BnYXOcnd.js  index-Pp-_bxF0.js  index-jjc-DA_F.css
ee_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
exports/: project_1_reviews.jsonl  reviewed_1.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  env.d.ts
frontend/src/assets/: main.css
frontend/src/components/: CreateProject.vue  Dashboard.vue  Project.vue  ProjectList.vue  Task.vue  Upload.vue
frontend/src/components/auth/: Login.vue  Logout.vue  Register.vue
frontend/src/router/: index.ts
frontend/src/utils/: axios.js
frontend/src/views/: HomeView.vue  ProjectView.vue  TaskView.vue
